--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ torch==1.10.0
 torchvision==0.11.1
 pytorch-lightning==1.4.8
 lightning-bolts==0.3.4
+torchmetrics==0.5
 scipy==1.7.1
 numpy==1.22.0
 pandas==1.3.3
